--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AdminRestaurante"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".views.cajascreen.CajaPagoActivity"
+            android:exported="false" />
         <activity
             android:name=".views.pedidoscreen.PedidosActivityAdmin"
             android:exported="false" />
@@ -24,7 +27,7 @@
             android:theme="@style/Theme.AdminRestaurante" /> <!-- VISTA DE LOGIN COMO INICIO -->
         <activity
             android:name=".views.loginscreen.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
